tests/variadic_spread_non_slice_bad.stderr
tests/variadic_spread_non_slice_bad.hop:8:6: error: HOP2069: spread argument must be assignable to the variadic slice type
