tests/variadic_spread_non_slice_bad.hop
// Verifies variadic spread non slice is rejected.
fn sum(nums ...i32) i32 {
	return 0
}

fn main() {
	var x i32 = 1
	sum(x...)
}
